--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,38 @@
- html{
-  font-size: 62.5%;/* 16px * 62.5 = 10px = 1rem*/
-  box-sizing: border-box ;
+.App {
+  text-align: center;
 }
-body{
-  font: 1.6rem Helvetica;
-  margin: 0;
-  height: 100vh;
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
-.grid-container{
-  display: grid;
-  grid-template-areas: "header" "main" "footer";
-  grid-template-columns: 1fr;
-  grid-template-rows: 5rem 1fr 5rem;
-  height: 100%;
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
-.header{
-  grid-area: header;
-  background-color: #203040;
-  color: #ffffff;
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
-  justify-content: space-between;
-}
-.brand a {
-  color: #ffffff;
-  font-size: 2.5rem;
-  font-weight: bold;
-}
-.header-links a {
-  color: #ffffff ;
-  text-decoration: none;
-}
-.header-links a:hover{
-  color: #ff8000;
-}
-.main{
-  grid-area: main;
-}
-.footer{
-  grid-area: footer;
-  background-color: #203040;
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-} 
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
